--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="header-content">
       <div class="logo">
         <a routerLink="/">
-          <img src="assets/logo.svg" alt="SkillMatch AI" class="logo-img" />
+          <!-- <img src="assets/logo.svg" alt="SkillMatch AI" class="logo-img" /> -->
           <span class="logo-text"
             >SkillMatch <span class="text-primary">AI</span></span
           >
